--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -52,16 +52,16 @@ header a {
  * Content CSS
  */
 
-.landingpage > #content-wrapper,
- .create > #content-wrapper{
-  min-height: 100%;
-  padding-left: 50px;
-  padding-right: 50px;
-  /* sticky footer */
-  box-sizing: border-box;
-  margin-bottom: -50px;
-  padding-bottom: 100px;
-
+.landingpage, .create{
+  &#content-wrapper{
+    min-height: 100%;
+    padding-left: 50px;
+    padding-right: 50px;
+    /* sticky footer */
+    box-sizing: border-box;
+    margin-bottom: -50px;
+    padding-bottom: 100px;
+  }
 }
 
 .landingpage#content-wrapper {
