--- a/src/css/master.css
+++ b/src/css/master.css
@@ -2170,13 +2170,25 @@ header a {
  */
 .landingpage#content-wrapper, .create#content-wrapper {
   min-height: 100%;
-  padding-left: 50px;
-  padding-right: 50px;
   /* sticky footer */
   box-sizing: border-box;
   margin-bottom: -50px;
   padding-bottom: 100px; }
 
+@media screen and (min-width: 800px) {
+  .landingpage#content-wrapper, .create#content-wrapper {
+    padding-left: 50px;
+    padding-right: 50px; }
+
+  #yourErrors {
+    margin: 10px 100px; } }
+@media screen and (max-width: 800px) {
+  .landingpage#content-wrapper, .create#content-wrapper {
+    padding-left: 5px;
+    padding-right: 5px; }
+
+  #yourErrors {
+    margin: 3px 5px; } }
 .landingpage#content-wrapper {
   background: url(../img/mounzer-awad-348688.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -2211,9 +2223,6 @@ header a {
   font-family: Monospace; }
   .code textarea, .code input {
     font-size: 11pt; }
-
-#yourErrors {
-  margin: 10px 100px; }
 
 /**
  * Footer CSS
