--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -55,12 +55,34 @@ header a {
 .landingpage, .create{
   &#content-wrapper{
     min-height: 100%;
-    padding-left: 50px;
-    padding-right: 50px;
     /* sticky footer */
     box-sizing: border-box;
     margin-bottom: -50px;
     padding-bottom: 100px;
+  }
+}
+@media screen and (min-width: 800px) {
+  .landingpage, .create{
+    &#content-wrapper{
+      padding-left: 50px;
+      padding-right: 50px;
+    }
+  }
+
+  #yourErrors{
+    margin: 10px 100px;
+  }
+}
+@media screen and (max-width: 800px) {
+  .landingpage, .create{
+    &#content-wrapper{
+      padding-left: 5px;
+      padding-right: 5px;
+    }
+  }
+
+  #yourErrors{
+    margin: 3px 5px;
   }
 }
 
@@ -105,9 +127,6 @@ header a {
   }
 }
 
-#yourErrors{
-  margin: 10px 100px;
-}
 /**
  * Footer CSS
  */
